# project-atlas

./: .claudeignore  .gitignore  LICENSE  README.md  install.ps1  pyproject.toml  start.ps1  tool_registry.md
.claude/: settings.json
atlas_backend/: ai_analysis.py  api.py  baseline.py  cli.py  config.py  db.py  graph.py  logging_config.py  models.py  module_infer.py  packet.py  prompt_builder.py  scanner.py
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.test.tsx  App.tsx  api.ts  styles.css  types.ts
dashboard/src/components/: AiMapReview.tsx  EvidenceDrawer.tsx  ModuleList.tsx  ModuleMap.tsx  PacketPreview.tsx  RepoHeader.tsx  SniperTrigger.tsx
docs/superpowers/plans/: 2026-04-25-project-atlas-deep-map.md  2026-04-25-project-atlas-visual-map.md
tests/: conftest.py  test_api_readonly.py  test_baseline.py  test_config.py  test_db_schema.py  test_deep_map.py  test_module_graph.py  test_module_infer.py  test_packet_compiler.py  test_project_discovery.py  test_prompt_builder.py  test_scanner_sample_repo.py  test_version.py
